# ink-generator

./: Cargo.toml  README.md  story.ink
src/: error.rs  lib.rs
src/parser/: input.rs  mod.rs
src/parser/schema/: choice.rs  knot.rs  message.rs  mod.rs  segment.rs  stitch.rs  story_point.rs
src/prettyprinter/: knot.rs  mod.rs  segment.rs  stitch.rs
src/runtime/: mod.rs  paragraph.rs  part.rs  state.rs  story.rs  story_point.rs
src/runtime/story/: ended.rs  id.rs  mod.rs  regular.rs  unstarted.rs
