cargo-features = ["edition"]

[package]
name = "ink-generator"
version = "0.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
autobins = false
edition = "2018"

[lib]
name = "inkgen"
path = "src/lib.rs"

[features]
default = ["compiler", "runtime", "binary"]
binary = ["colored", "text_io"]
runtime = []
compiler = ["quote", "proc-macro2", "uuid"]

[[bin]]
name = "inkgen"
path = "src/bin/compiler.rs"
required-features = ["compiler", "binary"]

[[bin]]
name = "inkplay"
path = "src/bin/runtime.rs"
required-features = ["runtime", "binary"]

[dependencies]
colored = { version = "1.6", optional = true }
text_io = { version = "0.1.7", optional = true }
quote = { version = "0.6", optional = true }
proc-macro2 = { version = "0.4", optional = true }
uuid = { version = "0.6", features = ["v4"], optional = true }
